Added elapsed time to Julia notebook

--- a/SlidingModeJulia.ipynb
+++ b/SlidingModeJulia.ipynb
@@ -155,11 +155,24 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.21502875"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "raw_sol = solve(prob_simple,Tsit5());\n",
-    "dist_sol = solve(prob_dist,Tsit5());\n",
-    "smc_sol = solve(prob_smc,Tsit5(),callback=pcb);"
+    "@elapsed begin\n",
+    "    raw_sol = solve(prob_simple,Tsit5());\n",
+    "    dist_sol = solve(prob_dist,Tsit5());\n",
+    "    smc_sol = solve(prob_smc,Tsit5(),callback=pcb);\n",
+    "end    "
    ]
   },
   {
@@ -186,12 +199,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.102383635"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@elapsed begin\n",
+    "    raw_sol = solve(prob_simple,Tsit5());\n",
+    "    dist_sol = solve(prob_dist,Tsit5());\n",
+    "    smc_sol = solve(prob_smc,Tsit5(),callback=pcb);\n",
+    "end    "
+   ]
   }
  ],
  "metadata": {
